[project]
name = "cindy"
version = "0.1.0"
description = "Sorts photos to directories by date, with or without the help of a flock of doves"
authors = [{ name = "Honza Javorek", email = "mail@honzajavorek.cz" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"click>=8.1.8",
]

[project.urls]
Repository = "https://github.com/honzajavorek/cindy/"

[project.scripts]
cindy = "cindy.__main__:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"
